--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,23 +29,26 @@ body > .container {
   float: right;
 }
 
-.h1{
-  text-align: center;
-}
+
+
 body {
-  background-color: #435165;
+  background-color: #ffffff;
+  background-image: url("../images/hintergrundbild.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
   margin: 0;
 }
 .register{
   width: 400px;
-  background-color: #ffffff;
+  background-color: #ccc6c6;
   box-shadow: 0 0 9px rgba(0, 0, 0, 0.3);
   margin: 100px auto;
 }
-.register h1{
+h1{
   text-align: center;
-  color: orange;
-  font-size: 24px;
+  color: #000000;
+  font-size: 60px;
+  font-family: Dubai;
   padding: 20px 0 20px 0;
   border-bottom: 1px solid #dee0e4;
 }
@@ -59,7 +62,7 @@ body {
 .register form input[type="password"], .register form input[type="text"]{
   width: 310px;
   height: 50px;
-  border: 1px solid #dee0e4;
+  border: 1px solid #b1b1c9;
   margin-bottom: 20px;
   padding: 0 15px;
 }
@@ -68,7 +71,7 @@ body {
   width: 100%;
   padding: 15px;
   margin-top: 20px;
-  background-color: #aad632;
+  background-color: #87b911;
   border: 0;
   cursor: pointer;
   font-weight: bold;
@@ -77,7 +80,7 @@ body {
 }
 
 .register form input[type="submit"]:hover{
-  background-color: #2868c7;
+  background-color: #08600e;
   transition: background-color 0.2s;
 }
 
